--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,8 @@ dependencies {
    // compile group: 'info.cukes', name: 'cucumber-java', version: '1.2.5'
     // https://mvnrepository.com/artifact/io.appium/java-client
     compile group: 'io.appium', name: 'java-client', version: '4.1.2'
+    //Logger
+    testCompile group: 'log4j', name: 'log4j', version: '1.2.17'
 }
 
 task ChromeTest(type: Test) {
