add driver factory

--- a/build.gradle
+++ b/build.gradle
@@ -2,11 +2,26 @@ group 'com.myProjectTestNG'
 version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
+apply plugin: 'idea'
 
-
+defaultTasks 'clean', 'test'
 
 repositories {
     mavenCentral()
+}
+
+
+configurations {
+    agent
+}
+ext {
+    groovyVersion = '2.4.7'
+    gebVersion = '1.0'
+    seleniumVersion = '3.0.1'
+    httpBuilderVersion = '0.7'
+    log4jVersion = '1.2.17'
+    aspectjVersion='1.8.0'
+    allureVersion='1.4.11'
 }
 
 dependencies {
@@ -20,7 +35,12 @@ dependencies {
     compile group: 'io.appium', name: 'java-client', version: '4.1.2'
     //Logger
     testCompile group: 'log4j', name: 'log4j', version: '1.2.17'
+
+    agent "org.aspectj:aspectjweaver:${aspectjVersion}"
+    testCompile "ru.yandex.qatools.allure:allure-testng-adaptor:${allureVersion}"
 }
+
+
 
 task ChromeTest(type: Test) {
     systemProperty "driver", "chrome"
@@ -36,4 +56,13 @@ task FirefoxTest(type: Test) {
         suites "src\\test\\resources\\testng-suite.xml"
     }
 
+    task generateAllureReport(type: Exec) {
+        commandLine "allure generate build/allure-results -v ${allureVersion} -o build/reports/allure"
+    }
+
+    test.finalizedBy(generateAllureReport)
+
+    task openAllureReport(type: Exec) {
+        commandLine "allure report open -o build/reports/allure"
+    }
 }
