--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,8 @@ dependencies {
     testCompile group: 'log4j', name: 'log4j', version: '1.2.17'
 
     agent "org.aspectj:aspectjweaver:${aspectjVersion}"
-    testCompile "ru.yandex.qatools.allure:allure-testng-adaptor:${allureVersion}"
+    // https://mvnrepository.com/artifact/ru.yandex.qatools.allure/allure-testng-adaptor
+    compile group: 'ru.yandex.qatools.allure', name: 'allure-testng-adaptor', version: '1.5.2'
 }
 
 
